[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/DirtCliffTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Rooms/RoomPlayerDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rooms/BaseRoom.gd" type="Script" id=3]
[ext_resource path="res://Rooms/SpawnPositions.tscn" type="PackedScene" id=7]

[node name="BaseRoom" type="YSort"]
script = ExtResource( 3 )

[node name="DirtCliffTileMap" parent="." instance=ExtResource( 1 )]

[node name="RoomPlayerDetector" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 179.032, 106.634 )

[node name="GeneratedThings" type="YSort" parent="."]

[node name="EnemiesNode" type="YSort" parent="GeneratedThings"]

[node name="SpawnPositions" parent="." instance=ExtResource( 7 )]

[editable path="RoomPlayerDetector"]

[editable path="SpawnPositions"]
